@@ -117,9 +117,8 @@ EOF
    
   my $inc = join ' ', map "-I\"$_\"", @incdir;
   my $lib = join ' ', map "-L\"$_\"", @libdir;
-  $lib .= " -lMagickCore";
 
-  return ($inc, $lib, '-O2');
+  return ($inc, $lib);
 }
 
 
@@ -128,7 +127,7 @@ my $delegate_tests='t/*.t';
 my $delegate;
 foreach $delegate (qw/bzlib djvu fftw fontconfig freetype jpeg jng jp2 lcms mpeg png rsvg tiff x11 xml wmf zlib/) {
   if ( -d "t/$delegate" ) {
-    if ($delegate =~ /x11/) {
+    if ( defined($ENV{'DISPLAY'}) && ($^O ne 'MSWin32') ) {
       if ( defined $ENV{'DISPLAY'} ) {
         $delegate_tests .= " t/$delegate/*.t";
       }
@@ -139,13 +138,23 @@ foreach $delegate (qw/bzlib djvu fftw fontconfig freetype jpeg jng jp2 lcms mpeg
 }
 
 # defaults for LIBS & INC & CCFLAGS params that we later pass to Writemakefile
-my $INC_magick = '-I"' . $Config{'usrinc'} . '/ImageMagick" -I/usr/local/include/ImageMagick';
-my $LIBS_magick = '-L"' . $Config{'usrlib'} . '" -L/usr/local/lib -lMagickCore -lperl -lm';
-my $CCFLAGS_magick = "$Config{'ccflags'}";
+my $INC_magick = '-I../ -I.. -I/usr/include/freetype2 -I/usr/include/libxml2 -I"' . $Config{'usrinc'} . '/ImageMagick"';
+my $LIBS_magick = '-L../magick/.libs -lMagickCore -lperl -lm';
+my $CCFLAGS_magick = "$Config{'ccflags'} -fopenmp -g -O2 -Wall -W -pthread";
+my $LDFLAGS_magick   = "-L../magick/.libs -lMagickCore $Config{'ldflags'} ";
+my $LDDLFLAGS_magick = "-L../magick/.libs -lMagickCore $Config{'lddlflags'} ";
 
 if (($^O eq 'MSWin32') && ($Config{cc} =~ /gcc/)) {
-  # a special setup for strawberry perl
-  ($INC_magick, $LIBS_magick, $CCFLAGS_magick) = AutodetectWin32gcc();
+  my($Ipaths, $Lpaths) = AutodetectWin32gcc();
+
+  #
+  # Setup for strawberry perl.
+  #
+  $INC_magick       = "$Ipaths";
+  $LIBS_magick      = "-lMagickCore";
+  $CCFLAGS_magick   = "$Config{'ccflags'}";
+  $LDFLAGS_magick   = "$Config{'ldflags'} $Lpaths ";
+  $LDDLFLAGS_magick = "$Config{'lddlflags'} $Lpaths ";
 }
 
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
@@ -162,7 +171,7 @@ WriteMakefile
    'AUTHOR' => 'ImageMagick Studio LLC',
 
    # Module version
-   'VERSION' => '6.5.7',
+   'VERSION' => '6.5.8',
 
    # Preprocessor defines
    'DEFINE'	=> ' -D_LARGE_FILES=1 -DHAVE_CONFIG_H',     # e.g., '-DHAVE_SOMETHING' 
@@ -183,10 +192,10 @@ WriteMakefile
    #'LD' => $Config{'ld'} == $Config{'cc'} ? 'gcc -std=gnu99' : $Config{'ld'},
 
    # Linker flags for building an executable
-   'LDFLAGS' =>  "-lMagickCore $Config{'ldflags'} ",
+   'LDFLAGS' =>  $LDFLAGS_magick,
 
    # Linker flags for building a dynamically loadable module
-   'LDDLFLAGS' => "-lMagickCore $Config{'lddlflags'} ",
+   'LDDLFLAGS' => $LDDLFLAGS_magick,
 
    # Install PerlMagick binary into ImageMagick bin directory
    'INSTALLBIN'	=> '/usr/local/bin',
