@@ -117,9 +117,8 @@ EOF
    
   my $inc = join ' ', map "-I\"$_\"", @incdir;
   my $lib = join ' ', map "-L\"$_\"", @libdir;
-  $lib .= " -lMagickCore";
 
-  return ($inc, $lib, '-O2');
+  return ($inc, $lib);
 }
 
 
@@ -128,7 +127,7 @@ my $delegate_tests='t/*.t';
 my $delegate;
 foreach $delegate (qw/@DELEGATES@/) {
   if ( -d "t/$delegate" ) {
-    if ($delegate =~ /x11/) {
+    if ( defined($ENV{'DISPLAY'}) && ($^O ne 'MSWin32') ) {
       if ( defined $ENV{'DISPLAY'} ) {
         $delegate_tests .= " t/$delegate/*.t";
       }
@@ -140,12 +139,22 @@ foreach $delegate (qw/@DELEGATES@/) {
 
 # defaults for LIBS & INC & CCFLAGS params that we later pass to Writemakefile
 my $INC_magick = '-I../ -I@top_srcdir@ @CPPFLAGS@ -I"' . $Config{'usrinc'} . '/ImageMagick"';
-my $LIBS_magick = '-L../magick/.libs -lMagickCore -L../wand/.libs -lperl @MATH_LIBS@';
+my $LIBS_magick = '-L../magick/.libs -lMagickCore -lperl @MATH_LIBS@';
 my $CCFLAGS_magick = "$Config{'ccflags'} @CFLAGS@";
+my $LDFLAGS_magick   = "-L../magick/.libs -lMagickCore $Config{'ldflags'} @LDFLAGS@";
+my $LDDLFLAGS_magick = "-L../magick/.libs -lMagickCore $Config{'lddlflags'} @LDFLAGS@";
 
 if (($^O eq 'MSWin32') && ($Config{cc} =~ /gcc/)) {
-  # a special setup for strawberry perl
-  ($INC_magick, $LIBS_magick, $CCFLAGS_magick) = AutodetectWin32gcc();
+  my($Ipaths, $Lpaths) = AutodetectWin32gcc();
+
+  #
+  # Setup for strawberry perl.
+  #
+  $INC_magick       = "$Ipaths";
+  $LIBS_magick      = "-lMagickCore";
+  $CCFLAGS_magick   = "$Config{'ccflags'}";
+  $LDFLAGS_magick   = "$Config{'ldflags'} $Lpaths ";
+  $LDDLFLAGS_magick = "$Config{'lddlflags'} $Lpaths ";
 }
 
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
@@ -183,10 +192,10 @@ WriteMakefile
    #'LD' => $Config{'ld'} == $Config{'cc'} ? '@CC@' : $Config{'ld'},
 
    # Linker flags for building an executable
-   'LDFLAGS' =>  "-L../magick/.libs -lMagickCore $Config{'ldflags'} @LDFLAGS@",
+   'LDFLAGS' =>  $LDFLAGS_magick,
 
    # Linker flags for building a dynamically loadable module
-   'LDDLFLAGS' => "-L../magick/.libs -lMagickCore $Config{'lddlflags'} @LDFLAGS@",
+   'LDDLFLAGS' => $LDDLFLAGS_magick,
 
    # Install PerlMagick binary into ImageMagick bin directory
    'INSTALLBIN'	=> '@BIN_DIR@',
