@@ -3,26 +3,28 @@ Introduction
     PerlMagick, is an objected-oriented Perl interface to ImageMagick.
     Use the module to read, manipulate, or write an image or image sequence
     from within a Perl script. This makes it suitable for Web CGI scripts. You
-    must have ImageMagick 6.5.7 or above installed on your system for this
+    must have ImageMagick 6.5.8 or above installed on your system for this
     module to work properly.
 
     See
 
         http://www.imagemagick.org/script/perl-magick.php
 
-    for additional information about PerlMagick.  See
+    for additional information about PerlMagick.  If you have problems, go to
+
+        http://www.imagemagick.org/discourse-server/viewforum.php?f=7
+
+    for help.  For instructions about installing ImageMagick, see
 
         http://www.imagemagick.org/
-
-    for instructions about installing ImageMagick.
 
 
 Installation 
 
     Get the PerlMagick distribution and type the following: 
 
-        gunzip ImageMagick-6.5.7-0.tar.gz
-        tar xvf ImageMagick-6.5.7
+        gunzip ImageMagick-6.5.8-0.tar.gz
+        tar xvf ImageMagick-6.5.8
 
     Follow the ImageMagick installation instructions in INSTALL-unix.txt
 		then type
@@ -73,6 +75,29 @@ Installation
     There are ways around this.  Consult the Perl manual pages for more
     information. You are now ready to utilize the PerlMagick routines from
     within your Perl scripts.
+
+Installation - Win32 Strawberry perl
+
+   On Win32 Strawberry perl the prefered way of installing PerlMagick is the
+   following:
+
+   1) Download and install ImageMagick Windows binaries from
+      http://www.imagemagick.org/script/binary-releases.php#windows
+
+   2) You HAVE TO choose dynamic (DLL) ImageMagick binaries.  Note: it is not
+      possible to mix 32/64bit binaries of perl and ImageMagick
+
+   3) During installation select that you want to install ImageMagick's
+      development files (libraries+headers)
+
+   4) You NEED TO have ImageMagick's directory in your PATH.  Note: we are
+      checking the presence of convert.exe or identify.exe tools
+
+   5) You might need Visual C++ Redistributable Package installed on your
+      system.  See instructions on ImageMagick's Binary Release webpage.
+
+   6) If you have all prerequisites 1)...5) you can simply install
+      ImageMagick by running: cpan -i Image::Magick
 
 
 Testing PerlMagick
